--- a/config/frpc.ini
+++ b/config/frpc.ini
@@ -2,10 +2,10 @@
 server_addr = center.yao-yang.cn
 server_port = 7000
 
-[web.{{ .Envs.DOMAIN }}]
+[web.{{ .Envs.SUBDOMAIN }}]
 type = http
 local_port = 80
-custom_domains = {{ .Envs.DOMAIN }}
+custom_domains = {{ .Envs.SUBDOMAIN }}
 health_check_type = http
 health_check_url = /
 health_check_interval_s = 10
