--- a/config/frpc.ini
+++ b/config/frpc.ini
@@ -5,7 +5,7 @@ server_port = 7000
 [web.{{ .Envs.SUBDOMAIN }}]
 type = http
 local_port = 80
-custom_domains = {{ .Envs.SUBDOMAIN }}
+subdomain = {{ .Envs.SUBDOMAIN }}
 health_check_type = http
 health_check_url = /
 health_check_interval_s = 10
