--- a/config/frpc.ini
+++ b/config/frpc.ini
@@ -1,11 +1,14 @@
 [common]
 server_addr = center.yao-yang.cn
 server_port = 7000
+authentication_timeout = 0
 
 [web.{{ .Envs.SUBDOMAIN }}]
 type = http
 local_port = 80
 subdomain = {{ .Envs.SUBDOMAIN }}
+group = web.{{ .Envs.SUBDOMAIN }}
+group_key = 321
 health_check_type = http
 health_check_url = /
 health_check_interval_s = 10
