--- a/config/frpc.supervisor.web.complain.conf
+++ b/config/frpc.supervisor.web.complain.conf
@@ -1,5 +1,6 @@
 [program:complain_web]
 command=/root/center_frpc_http/bin/frpc complain
+stopasgroup=true
 killasgroup=true
 restart=always
 user=root
