--- a/config/frpc.supervisor.web.dialogue.conf
+++ b/config/frpc.supervisor.web.dialogue.conf
@@ -1,5 +1,6 @@
 [program:dialogue_web]
 command=/root/center_frpc_http/bin/frpc dialogue
+stopasgroup=true
 killasgroup=true
 restart=always
 user=root
