--- a/config/frpc.supervisor.web.data_reporter.conf
+++ b/config/frpc.supervisor.web.data_reporter.conf
@@ -1,5 +1,6 @@
 [program:data_reporter_web]
 command=/root/center_frpc_http/bin/frpc data_reporter
+stopasgroup=true
 killasgroup=true
 restart=always
 user=root
