添加 argue_system

--- a/config/frpc.supervisor.web.argue_system.conf
+++ b/config/frpc.supervisor.web.argue_system.conf
@@ -1,5 +1,5 @@
-[program:argue_system_web]
-command=/root/center_frpc_http/bin/frpc argue_system
+[program:argue_web]
+command=/root/center_frpc_http/bin/frpc argue
 stopasgroup=true
 killasgroup=true
 restart=always
