重命名 supervisor program 名称

--- a/config/frpc.supervisor.web.complain.conf
+++ b/config/frpc.supervisor.web.complain.conf
@@ -1,4 +1,4 @@
-[program:complain_web]
+[program:frpc_http_complain]
 command=/root/center_frpc_http/bin/frpc complain
 stopasgroup=true
 killasgroup=true
