--- a/config/frpc.supervisor.web.mobile.conf
+++ b/config/frpc.supervisor.web.mobile.conf
@@ -1,4 +1,4 @@
-[program:mobile_web]
+[program:frpc_http_mobile]
 command=/root/center_frpc_http/bin/frpc mobile
 stopasgroup=true
 killasgroup=true
