--- a/config/frpc.supervisor.web.stream.conf
+++ b/config/frpc.supervisor.web.stream.conf
@@ -1,4 +1,4 @@
-[program:stream_web]
+[program:frpc_http_stream]
 command=/root/center_frpc_http/bin/frpc stream
 stopasgroup=true
 killasgroup=true
