--- a/config/frpc.supervisor.web.dialogue.conf
+++ b/config/frpc.supervisor.web.dialogue.conf
@@ -1,4 +1,4 @@
-[program:dialogue_web]
+[program:frpc_http_dialogue_web]
 command=/root/center_frpc_http/bin/frpc dialogue
 stopasgroup=true
 killasgroup=true
