--- a/config/frpc.supervisor.web.portal.conf
+++ b/config/frpc.supervisor.web.portal.conf
@@ -1,4 +1,4 @@
-[program:portal_web]
+[program:frpc_http_portal]
 command=/root/center_frpc_http/bin/frpc portal
 stopasgroup=true
 killasgroup=true
